feat: adiciona novos tokens, suporte ao docker e formatação de arquivos